# media-scan-monitor

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  plex_monitor.sh  plex_token.txt.example  pyproject.toml
.claude/skills/run-dev-server/: SKILL.md
.github/workflows/: ci.yml  docker-build.yml
docs/: FOLLOWUPS.md  PLAN.md
docs/superpowers/plans/: 2026-06-17-phase1-00-interface-contract.md  2026-06-17-phase1-01-db-and-crypto.md  2026-06-17-phase1-02-config-runtime.md  2026-06-17-phase1-03-server-adapters.md  2026-06-17-phase1-04-watcher.md  2026-06-17-phase1-05-pipeline.md  2026-06-17-phase1-06-engine-cli.md  2026-06-17-phase1-README.md  2026-06-20-phase2-01-mediabrowser-adapters.md  2026-06-20-phase2-02-audiobookshelf-adapter.md  2026-06-20-phase2-03-webhook-adapter.md  2026-06-20-phase2-README.md  2026-06-20-phase3-00-web-interface-contract.md  2026-06-20-phase3-01-app-auth.md  2026-06-20-phase3-02-rest-api.md  2026-06-20-phase3-03-engine-integration.md  2026-06-20-phase3-04-dashboard-sse.md  2026-06-20-phase3-README.md  2026-06-21-autogen-first-run-password.md  2026-06-21-login-password-reset.md  2026-06-21-phase4-00-deployment-contract.md  2026-06-21-phase4-01-image.md  2026-06-21-phase4-02-compose.md  2026-06-21-phase4-03-ci.md  2026-06-21-phase4-04-docs.md  2026-06-21-phase4-README.md  2026-06-22-folder-picker.md  2026-06-23-consolidated-server-save.md  2026-06-24-library-discovery.md  2026-06-24-webhook-payload-presets.md
docs/superpowers/specs/: 2026-06-21-autogen-first-run-password-design.md  2026-06-21-login-password-reset-design.md  2026-06-21-phase4-deployment-design.md  2026-06-22-folder-picker-design.md  2026-06-23-consolidated-server-save-design.md  2026-06-23-library-discovery-design.md  2026-06-24-webhook-payload-presets-design.md
mediascanmonitor/: __init__.py  __main__.py  cli.py  engine.py  normalize.py
mediascanmonitor/config/: __init__.py  defaults.py  runtime.py
mediascanmonitor/db/: __init__.py  crypto.py  models.py  repo.py  schemas.py  session.py
mediascanmonitor/migrations/: env.py  script.py.mako
mediascanmonitor/migrations/versions/: 0001_initial.py  0002_folder_library_name.py  0003_webhook_payload_preset.py
mediascanmonitor/observ/: __init__.py  events_bus.py  logging.py
mediascanmonitor/pipeline/: __init__.py  debounce.py  dispatcher.py  events.py  filters.py  router.py
mediascanmonitor/servers/: __init__.py  audiobookshelf.py  base.py  emby.py  http.py  jellyfin.py  plex.py  registry.py  webhook.py  webhook_presets.py
mediascanmonitor/watcher/: __init__.py  base.py  inotify_backend.py  watch_limit.py
mediascanmonitor/web/: __init__.py  api_schemas.py  app.py  auth.py  deps.py  fsbrowse.py  pages.py  ratelimit.py  rebuild.py  server.py  serverprobe.py  servertest.py  writes.py
mediascanmonitor/web/api/: __init__.py  events.py  folders.py  servers.py  system.py
mediascanmonitor/web/static/: VENDOR.md  app.css
mediascanmonitor/web/templates/: _error.html  _folder_editor.html  _folder_picker.html  _folder_rows_script.html  _folders.html  _fs_listing.html  _library_options.html  _library_picker.html  _nav.html  _saved.html  _server_form_fields.html  _servers_list.html  _status.html  _test_result.html  _token_field.html  _webhook_preset_script.html  base.html  change_password.html  dashboard.html  events.html  login.html  reset_password.html  server_detail.html  server_new.html  servers.html  settings.html  setup.html
scripts/: dev_seed.py  dev_serve.sh
tests/: _helpers.py  test_cli.py  test_e2e_headless.py  test_engine.py  test_logging.py  test_normalize.py
tests/config/: __init__.py  test_defaults.py  test_runtime.py
tests/db/: conftest.py  test_crypto.py  test_folder_update.py  test_migrations.py  test_models.py  test_repo.py  test_schemas.py  test_session.py
tests/pipeline/: __init__.py  clock.py  factories.py  test_debounce.py  test_dispatcher.py  test_events.py  test_filters.py  test_router.py
tests/servers/: __init__.py  conftest.py  test_audiobookshelf.py  test_base.py  test_emby.py  test_http.py  test_jellyfin.py  test_plex.py  test_registry.py  test_webhook.py  test_webhook_presets.py
tests/watcher/: test_fake_watcher.py  test_inotify_backend.py  test_mask_mapping.py  test_watch_limit.py
tests/web/: conftest.py  test_api_events.py  test_api_folders.py  test_api_schemas.py  test_api_servers.py  test_auth.py  test_auth_routes.py  test_deps.py  test_events_bus.py  test_fsbrowse.py  test_pages.py  test_ratelimit.py  test_rebuild.py  test_server.py  test_sse.py  test_static.py  test_system.py  test_ui_forms.py  test_ui_libraries.py  test_ui_settings.py  test_writes.py
